--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
-    "version": 2,
-    "builds": [
-      
-        {"src": "api/server.py", "use": "@vercel/python"}
-      
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "api/server.py" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "app.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "handle": "fileShareDW" },
+    { "src": "/(.*)", "dest": "app.py" }
+  ]
+}
