--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app.py", "use": "@vercel/python" }
+    { "src": "app.py", 
+    "use": "@vercel/python" }
   ],
   "routes": [
-    { "handle": "fileShareDW" },
-    { "src": "/(.*)", "dest": "app.py" }
+    { "src": "/(.*)", 
+    "dest": "app.py" }
   ]
 }
